--- a/main.css
+++ b/main.css
@@ -580,9 +580,9 @@ a {
 .main_tech .main_tech_image .main_tech_icon .main_tech_icon_item {
   border-radius: 50%;
   font-size: 3rem;
-  color: #433D60;
+  color: #433d60;
   padding: 2rem;
-  background: linear-gradient(267.61deg, #C0B7E8 -0.6%, #8176AF 98.31%);
+  background: linear-gradient(267.61deg, #c0b7e8 -0.6%, #8176af 98.31%);
 }
 .main_tech .main_tech_cards {
   display: flex;
@@ -676,7 +676,7 @@ a {
   width: 16rem;
   height: 16rem;
   border-radius: 50%;
-  background: linear-gradient(251.27deg, #C0B7E8 12.87%, #8176AF 89.33%);
+  background: linear-gradient(251.27deg, #c0b7e8 12.87%, #8176af 89.33%);
   color: #343045;
   font-size: 6.4rem;
   font-weight: 700;
@@ -693,7 +693,7 @@ a {
 }
 .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_right {
   font-size: 3rem;
-  color: #C0B7E8;
+  color: #c0b7e8;
 }
 .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_text .main_circleCards_item_bottom_text_title {
   color: #ffffff;
@@ -725,7 +725,7 @@ a {
     background-color: rgba(14, 14, 14, 0.3215686275);
   }
   .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon i {
-    background: linear-gradient(267.61deg, #C0B7E8 -0.6%, #8176AF 98.31%);
+    background: linear-gradient(267.61deg, #c0b7e8 -0.6%, #8176af 98.31%);
     display: inline-block;
     display: flex;
     align-items: center;
@@ -734,12 +734,269 @@ a {
     height: 4.4rem;
     border-radius: 50%;
     font-size: 2rem;
-    color: #433D60;
+    color: #433d60;
   }
   .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon_left {
     left: -2rem;
   }
   .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon_right {
     right: -2rem;
+  }
+}
+
+.main_register {
+  background: radial-gradient(50% 50% at 50% 50%, #403a5f 0%, #211e2e 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6rem;
+  flex-direction: column;
+  margin-top: 11rem;
+  padding: 9rem 10rem;
+  border-radius: 10rem;
+}
+.main_register .main_register_top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  flex-direction: column;
+  text-align: center;
+}
+.main_register .main_register_top .main_register_top_title {
+  color: #ffffff;
+  font-size: 3.6rem;
+  font-weight: 700;
+  line-height: 4.3rem;
+  width: 41rem;
+  padding-bottom: 3rem;
+  border-bottom: 1px solid;
+  -o-border-image: linear-gradient(270deg, #343045 0%, #c0b7e8 34.9%, #8176af 68.75%, #343045 100%) 1;
+     border-image: linear-gradient(270deg, #343045 0%, #c0b7e8 34.9%, #8176af 68.75%, #343045 100%) 1;
+}
+.main_register .main_register_top .main_register_top_text {
+  color: #ffffff;
+  font-size: 3.2rem;
+  font-weight: 300;
+  line-height: 4.3rem;
+}
+.main_register .main_register_form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  flex-direction: column;
+  width: 100%;
+}
+.main_register .main_register_form .main_register_form_main {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1rem;
+  width: 100%;
+  row-gap: 4rem;
+}
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input:nth-child(5),
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input:nth-child(6) {
+  grid-column: span 2;
+}
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input {
+  border-radius: 4rem;
+  padding: 2rem 4.2rem;
+  background-color: transparent;
+  border: 2px solid #fff;
+}
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input_text {
+  height: 21rem;
+  resize: none;
+}
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input::-moz-placeholder {
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.7rem;
+}
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input::placeholder {
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.7rem;
+}
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input:focus {
+  outline: none;
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.7rem;
+}
+.main_register .main_register_form .main_register_form_button {
+  color: #343045;
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 1.4rem;
+  width: 21rem;
+  height: 4.8rem;
+  border-radius: 4rem;
+  background: linear-gradient(90deg, #8176af 0%, #c0b7e8 100%);
+  cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .main_register .main_register_form {
+    width: 100%;
+  }
+  .main_register .main_register_form .main_register_form_main {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 2.2rem;
+  }
+  .main_register .main_register_form .main_register_form_main .main_register_form_main_input {
+    width: 100%;
+  }
+  .main_register .main_register_form .main_register_form_button {
+    width: 100%;
+  }
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 4.3rem;
+  flex-direction: column;
+  margin-top: 12.2rem;
+}
+.footer .footer_top {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 0;
+  padding-bottom: 7rem;
+  border-bottom: 1px solid;
+  -o-border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%, #343045 100%) 1;
+     border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%, #343045 100%) 1;
+}
+.footer .footer_top .footer_top_logo {
+  padding-right: 10rem;
+}
+.footer .footer_top .footer_top_logo .footer_top_logo_img {
+  width: 18.5rem;
+  height: 18.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.footer .footer_top .footer_top_menu {
+  min-height: 19rem;
+  padding-inline: 9rem;
+  border-left: 6px solid;
+  -o-border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
+     border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 2rem;
+  flex-direction: column;
+}
+.footer .footer_top .footer_top_menu .footer_top_menu_item .footer_top_menu_item_link {
+  color: #ffffff;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.9rem;
+}
+.footer .footer_top .footer_top_about {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 3.9rem;
+  flex-direction: column;
+  padding-left: 9rem;
+  border-left: 6px solid;
+  -o-border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
+     border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
+  min-height: 19rem;
+}
+.footer .footer_top .footer_top_about .footer_top_about_title {
+  color: #ffffff;
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.9rem;
+}
+.footer .footer_top .footer_top_about .footer_top_about_media {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 2rem;
+}
+.footer .footer_top .footer_top_about .footer_top_about_media .footer_top_about_media_item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0;
+  width: 3.2rem;
+  height: 3.2rem;
+  border-radius: 50%;
+  background: #c0b7e8;
+}
+.footer .footer_top .footer_top_about .footer_top_about_media .footer_top_about_media_item .footer_top_about_media_item_icon {
+  color: #302c42;
+}
+.footer .footer_top .footer_top_about .footer_top_about_button {
+  color: #343045;
+  font-size: 1.2rem;
+  font-weight: 700;
+  line-height: 1.4rem;
+  width: 21rem;
+  height: 4.8rem;
+  border-radius: 4rem;
+  background: linear-gradient(90deg, #8176af 0%, #c0b7e8 100%);
+  cursor: pointer;
+}
+.footer .footer_bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.3rem;
+}
+.footer .footer_bottom .footer_bottom_text {
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 1.7rem;
+}
+@media screen and (max-width: 768px) {
+  .footer .footer_top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+    flex-direction: column;
+  }
+  .footer .footer_top .footer_top_logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+    padding: 0;
+  }
+  .footer .footer_top .footer_top_menu {
+    display: none;
+  }
+  .footer .footer_top .footer_top_about {
+    border: none;
+    padding: 0;
+    align-items: center;
+  }
+  .footer .footer_top .footer_top_about .footer_top_about_button {
+    width: 100%;
+  }
+  .footer .footer_bottom {
+    text-align: center;
+    flex-direction: column;
+  }
+  .footer .footer_bottom_text:nth-child(2)::first-letter,
+  .footer .footer_bottom_text:nth-child(3)::first-letter {
+    font-size: 0;
   }
 }/*# sourceMappingURL=main.css.map */
