HTML5-CSS3_IDTECH_Project Completed

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ html {
 }
 
 body {
+  width: 100%;
   font-size: 1.6rem;
   font-family: "Montserrat", sans-serif;
   background-color: #302c42;
@@ -37,6 +38,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   gap: 0;
   width: 100%;
 }
@@ -44,6 +46,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   gap: 0;
   width: 19.3rem;
 }
@@ -64,6 +67,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   gap: 0;
 }
 .header .header_navbar .header_navbar_menu .header_navbar_menu_item .header_navbar_menu_item_link {
@@ -77,12 +81,14 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   gap: 0;
 }
 .header .header_navbar .header_navbar_button .header_navbar_button_item_link {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0;
   border-radius: 4rem;
   width: 15.4rem;
@@ -126,6 +132,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
+  gap: 0;
 }
 .main_banner .main_banner_top .main_banner_top_text {
   width: 40%;
@@ -153,6 +161,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-direction: row;
   gap: 4rem;
   margin-top: 4rem;
 }
@@ -160,6 +169,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0;
   color: #343045;
   font-size: 1.2rem;
@@ -174,6 +184,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0;
   width: 4.1rem;
   height: 3.3rem;
@@ -204,6 +215,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   gap: 0;
   padding-inline: 4rem;
   border-right: 1px solid rgba(192, 183, 232, 0.3294117647);
@@ -215,6 +227,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 2.3rem;
 }
 .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_center .main_banner_bottom_item_center_icon {
@@ -244,10 +257,10 @@ a {
   }
   .main_banner .main_banner_top .main_banner_top_text {
     width: 100%;
-    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     gap: 0;
     text-align: center;
   }
@@ -261,7 +274,7 @@ a {
     width: 100%;
     height: 9.6rem;
   }
-  .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_img {
+  .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_link .main_banner_top_text_button_img {
     display: none;
   }
   .main_banner .main_banner_bottom {
@@ -273,6 +286,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: row;
     gap: 2rem;
     border: none;
   }
@@ -288,8 +302,8 @@ a {
   .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_text_title {
     display: none;
   }
-  .main_banner .main_banner_bottom .main_banner_bottom_item:nth-child(2),
-  .main_banner .main_banner_bottom .main_banner_bottom_item:last-child {
+  .main_banner .main_banner_bottom .main_banner_bottom_itemTwo,
+  .main_banner .main_banner_bottom .main_banner_bottom_itemThree {
     display: none;
   }
 }
@@ -301,7 +315,7 @@ a {
   margin-top: 9rem;
 }
 .main_introduction_and_build .main_introduction_and_build_title .main_introduction_and_build_title_primary {
-  color: #fff;
+  color: #ffffff;
   font-size: 3.6rem;
   font-weight: 700;
   line-height: 4.3rem;
@@ -310,10 +324,11 @@ a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-direction: row;
   gap: 3rem;
 }
 .main_introduction_and_build .main_introduction_and_build_title .main_introduction_and_build_title_secondary .main_introduction_and_build_title_secondary_text {
-  color: #fff;
+  color: #ffffff;
   font-size: 3.6rem;
   font-weight: 300;
   line-height: 4.3rem;
@@ -323,7 +338,7 @@ a {
   max-height: 6rem;
 }
 .main_introduction_and_build .main_introduction_and_build_text {
-  color: #fff;
+  color: #ffffff;
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.9rem;
@@ -354,8 +369,8 @@ a {
   margin-top: 9rem;
 }
 .main_about .main_about_img .main_about_img_item {
-  width: 55.4rem;
-  height: 55.7rem;
+  max-width: 55.4rem;
+  max-height: 55.7rem;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 24rem 10rem 24rem 10rem;
@@ -365,15 +380,15 @@ a {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  gap: 4.2rem;
   flex-direction: column;
+  gap: 4.2rem;
 }
 .main_about .main_about_cards .main_about_cards_top {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  gap: 0.5rem;
   flex-direction: column;
+  gap: 0.5rem;
 }
 .main_about .main_about_cards .main_about_cards_top .main_about_cards_top_title {
   color: #ffffff;
@@ -391,8 +406,8 @@ a {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  gap: 2.8rem;
   flex-direction: column;
+  gap: 2.8rem;
 }
 .main_about .main_about_cards .main_about_cards_bottom .main_about_cards_bottom_text {
   color: #ffffff;
@@ -416,8 +431,8 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5rem;
     flex-direction: column;
+    gap: 5rem;
   }
   .main_about .main_about_cards .main_about_cards_top {
     display: none;
@@ -431,6 +446,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-direction: row;
   gap: 2rem;
   flex-wrap: wrap;
   margin-top: 10rem;
@@ -439,8 +455,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 0;
   flex-direction: column;
+  gap: 0;
   min-height: 48rem;
   max-width: 31rem;
   padding: 2.3rem 2.5rem 4rem 2.5rem;
@@ -535,9 +551,9 @@ a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-direction: column;
   gap: 6rem;
   margin-top: 10rem;
-  flex-direction: column;
   position: relative;
 }
 .main_tech .main_tech_image {
@@ -566,6 +582,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0;
   position: absolute;
   width: 10rem;
@@ -588,6 +605,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 9rem;
   flex-wrap: wrap;
 }
@@ -623,6 +641,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: row;
     gap: 0;
     position: absolute;
     width: 8rem;
@@ -646,6 +665,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 11rem;
   flex-wrap: wrap;
   margin-top: 9rem;
@@ -654,6 +674,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   gap: 2.5rem;
   flex-direction: column;
   position: relative;
@@ -662,6 +683,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0;
   width: 19.8rem;
   height: 19.8rem;
@@ -672,6 +694,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0;
   width: 16rem;
   height: 16rem;
@@ -686,6 +709,7 @@ a {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
+  flex-direction: row;
   gap: 0.8rem;
 }
 .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon {
@@ -713,10 +737,10 @@ a {
     display: none;
   }
   .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon {
-    display: block;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: row;
     gap: 0;
     position: absolute;
     border-radius: 50%;
@@ -749,18 +773,18 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 6rem;
   flex-direction: column;
+  gap: 6rem;
   margin-top: 11rem;
-  padding: 9rem 10rem;
+  padding: 9rem 4rem;
   border-radius: 10rem;
 }
 .main_register .main_register_top {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
   flex-direction: column;
+  gap: 2rem;
   text-align: center;
 }
 .main_register .main_register_top .main_register_top_title {
@@ -784,8 +808,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5rem;
   flex-direction: column;
+  gap: 5rem;
   width: 100%;
 }
 .main_register .main_register_form .main_register_form_main {
@@ -803,7 +827,7 @@ a {
   border-radius: 4rem;
   padding: 2rem 4.2rem;
   background-color: transparent;
-  border: 2px solid #fff;
+  border: 2px solid #ffffff;
 }
 .main_register .main_register_form .main_register_form_main .main_register_form_main_input_text {
   height: 21rem;
@@ -824,7 +848,13 @@ a {
 .main_register .main_register_form .main_register_form_main .main_register_form_main_input:focus {
   outline: none;
   color: #ffffff;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.7rem;
+}
+.main_register .main_register_form .main_register_form_main .main_register_form_main_input:not(:focus) {
+  color: #ffffff;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.7rem;
 }
@@ -863,22 +893,24 @@ a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 4.3rem;
   flex-direction: column;
+  gap: 4.3rem;
   margin-top: 12.2rem;
 }
 .footer .footer_top {
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: row;
   gap: 0;
   padding-bottom: 7rem;
   border-bottom: 1px solid;
-  -o-border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%, #343045 100%) 1;
-     border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%, #343045 100%) 1;
+  -o-border-image: linear-gradient(270deg, #343045 0%, #c0b7e8 34.9%, #8176af 68.75%, #343045 100%) 1;
+     border-image: linear-gradient(270deg, #343045 0%, #c0b7e8 34.9%, #8176af 68.75%, #343045 100%) 1;
 }
 .footer .footer_top .footer_top_logo {
+  width: 23%;
   padding-right: 10rem;
 }
 .footer .footer_top .footer_top_logo .footer_top_logo_img {
@@ -888,16 +920,17 @@ a {
      object-fit: cover;
 }
 .footer .footer_top .footer_top_menu {
+  width: 23%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 2rem;
   min-height: 19rem;
   padding-inline: 9rem;
   border-left: 6px solid;
   -o-border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
      border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 2rem;
-  flex-direction: column;
 }
 .footer .footer_top .footer_top_menu .footer_top_menu_item .footer_top_menu_item_link {
   color: #ffffff;
@@ -906,16 +939,17 @@ a {
   line-height: 1.9rem;
 }
 .footer .footer_top .footer_top_about {
+  width: 30%;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 3.9rem;
   flex-direction: column;
+  gap: 3.9rem;
+  min-height: 19rem;
   padding-left: 9rem;
   border-left: 6px solid;
   -o-border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
      border-image: linear-gradient(179.87deg, #343045 0.47%, #343045 0.47%, #c0b7e8 35.21%, #8176af 68.91%, #343045 99.5%) 1;
-  min-height: 19rem;
 }
 .footer .footer_top .footer_top_about .footer_top_about_title {
   color: #ffffff;
@@ -927,12 +961,15 @@ a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-direction: row;
   gap: 2rem;
+  flex-wrap: wrap;
 }
 .footer .footer_top .footer_top_about .footer_top_about_media .footer_top_about_media_item {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0;
   width: 3.2rem;
   height: 3.2rem;
@@ -947,7 +984,8 @@ a {
   font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.4rem;
-  width: 21rem;
+  max-width: 21rem;
+  padding-inline: 2rem;
   height: 4.8rem;
   border-radius: 4rem;
   background: linear-gradient(90deg, #8176af 0%, #c0b7e8 100%);
@@ -957,6 +995,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
   gap: 0.3rem;
 }
 .footer .footer_bottom .footer_bottom_text {
@@ -970,13 +1009,14 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5rem;
     flex-direction: column;
+    gap: 5rem;
   }
   .footer .footer_top .footer_top_logo {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: row;
     gap: 0;
     padding: 0;
   }
@@ -987,6 +1027,9 @@ a {
     border: none;
     padding: 0;
     align-items: center;
+  }
+  .footer .footer_top .footer_top_about .footer_top_about_media {
+    flex-wrap: nowrap;
   }
   .footer .footer_top .footer_top_about .footer_top_about_button {
     width: 100%;
