--- a/main.scss
+++ b/main.scss
@@ -7,12 +7,13 @@
   padding: 0;
   box-sizing: border-box;
   border: none;
-  //   outline: 1px solid white;
+  // outline: 1px solid white;
 }
 html {
   font-size: 10px;
 }
 body {
+  width: 100%;
   font-size: 1.6rem;
   font-family: "Montserrat", sans-serif;
   background-color: #302c42;
@@ -28,16 +29,12 @@ a {
 //   -------header started--------
 .header {
   width: 100%;
-  // margin-inline: auto;
-  // border: 1px solid white;
   .header_navbar {
-    // border: 1px solid red;
-    @include d-flex(center, space-between, 0);
+    @include d-flex(center, space-between, row, 0);
     width: 100%;
 
     .header_navbar_logo {
-      // border: 1px solid red;
-      @include d-flex(center, space-between, 0);
+      @include d-flex(center, space-between, row, 0);
       width: 19.3rem;
       .header_navbar_logo_img {
         width: 10.2rem;
@@ -53,7 +50,7 @@ a {
 
     .header_navbar_menu {
       width: 39rem;
-      @include d-flex(center, space-between, 0);
+      @include d-flex(center, space-between, row, 0);
 
       .header_navbar_menu_item {
         .header_navbar_menu_item_link {
@@ -64,10 +61,10 @@ a {
 
     .header_navbar_button {
       width: 34.7rem;
-      @include d-flex(center, space-between, 0);
+      @include d-flex(center, space-between, row, 0);
 
       .header_navbar_button_item_link {
-        @include d-flex(center, center, 0);
+        @include d-flex(center, center, row, 0);
         border-radius: 4rem;
         width: 15.4rem;
         height: 4.8rem;
@@ -110,17 +107,12 @@ a {
   display: flex;
   flex-direction: column;
   margin-top: 9.8rem;
-  // border: 1px solid red;
 
   .main_banner_top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    // border: 1px solid rgb(255, 255, 255);
+    @include d-flex(center, space-between, row, 0);
 
     .main_banner_top_text {
       width: 40%;
-      // border: 1px solid white;
       .main_banner_top_text_main {
         .main_banner_top_text_main_title {
           @include font-style($--primary-color, 4.6rem, 700, 5.6rem);
@@ -136,11 +128,10 @@ a {
         @include font-style($--primary-color, 1.6rem, 400, 2rem);
       }
       .main_banner_top_text_button {
-        @include d-flex(center, flex-start, 4rem);
+        @include d-flex(center, flex-start, row, 4rem);
         margin-top: 4rem;
-        // border: 1px solid white;
         .main_banner_top_text_button_link {
-          @include d-flex(center, center, 0);
+          @include d-flex(center, center, row, 0);
           @include font-style(#343045, 1.2rem, 700, 1.4rem);
           border-radius: 4rem;
           background-image: $--button-linear-gradient;
@@ -148,7 +139,7 @@ a {
           height: 4.8rem;
         }
         .main_banner_top_text_button_img {
-          @include d-flex(center, center, 0);
+          @include d-flex(center, center, row, 0);
           width: 4.1rem;
           height: 3.3rem;
           object-fit: cover;
@@ -174,29 +165,25 @@ a {
     background-image: $--radial-gradient;
     padding-block: 2.8rem;
     .main_banner_bottom_item {
-      @include d-flex(center, space-between, 0);
+      @include d-flex(center, space-between, row, 0);
       padding-inline: 4rem;
-      // border: 1px solid red;
       border-right: 1px solid #c0b7e854;
       .main_banner_bottom_icon {
         display: none;
       }
       .main_banner_bottom_item_center {
-        @include d-flex(center, center, 2.3rem);
+        @include d-flex(center, center, row, 2.3rem);
         .main_banner_bottom_item_center_icon {
           width: 4.4rem;
           height: 4.4rem;
           object-fit: contain;
-          // border: 1px solid red;
         }
         .main_banner_bottom_item_center_text {
           .main_banner_bottom_item_center_text_title {
-            // border: 1px solid white;
             @include font-style($--primary-color, 2.2rem, 700, 2.9rem);
           }
           .main_banner_bottom_item_center_text_paragraph {
             @include font-style($--primary-color, 1.4rem, 400, 1.7rem);
-            // border: 1px solid white;
           }
         }
       }
@@ -211,23 +198,20 @@ a {
       flex-direction: column-reverse;
       .main_banner_top_text {
         width: 100%;
-        flex-direction: column;
-        @include d-flex(center, center, 0);
+        @include d-flex(center, center, column, 0);
         text-align: center;
 
         .main_banner_top_text_paragraph {
           display: none;
         }
         .main_banner_top_text_button {
-          // border: 1px solid red;
           width: 100%;
           .main_banner_top_text_button_link {
             width: 100%;
             height: 9.6rem;
-            // font-size: 1.4rem;
-          }
-          .main_banner_top_text_button_img {
-            display: none;
+            .main_banner_top_text_button_img {
+              display: none;
+            }
           }
         }
       }
@@ -235,7 +219,7 @@ a {
     .main_banner_bottom {
       @include d-grid(1fr, 0);
       .main_banner_bottom_item {
-        @include d-flex(center, space-between, 2rem);
+        @include d-flex(center, space-between, row, 2rem);
         border: none;
         .main_banner_bottom_icon {
           display: block;
@@ -252,8 +236,8 @@ a {
           display: none;
         }
       }
-      .main_banner_bottom_item:nth-child(2),
-      .main_banner_bottom_item:last-child {
+      .main_banner_bottom_itemTwo,
+      .main_banner_bottom_itemThree {
         display: none;
       }
     }
@@ -268,14 +252,13 @@ a {
   @include d-grid(1fr 1.1fr, 10rem);
   margin-top: 9rem;
   .main_introduction_and_build_title {
-    // border: 1px solid red;
     .main_introduction_and_build_title_primary {
-      @include font-style(#fff, 3.6rem, 700, 4.3rem);
+      @include font-style($--primary-color, 3.6rem, 700, 4.3rem);
     }
     .main_introduction_and_build_title_secondary {
-      @include d-flex(center, flex-start, 3rem);
+      @include d-flex(center, flex-start, row, 3rem);
       .main_introduction_and_build_title_secondary_text {
-        @include font-style(#fff, 3.6rem, 300, 4.3rem);
+        @include font-style($--primary-color, 3.6rem, 300, 4.3rem);
       }
       .main_section_title_icon {
         max-width: 22.8rem;
@@ -285,7 +268,7 @@ a {
   }
 
   .main_introduction_and_build_text {
-    @include font-style(#fff, 1.6rem, 400, 1.9rem);
+    @include font-style($--primary-color, 1.6rem, 400, 1.9rem);
   }
 
   @media screen and (max-width: 768px) {
@@ -313,10 +296,9 @@ a {
   @include d-grid(1fr 1.1fr, 10rem);
   margin-top: 9rem;
   .main_about_img {
-    // text-align: end;
     .main_about_img_item {
-      width: 55.4rem;
-      height: 55.7rem;
+      max-width: 55.4rem;
+      max-height: 55.7rem;
       object-fit: cover;
       border-radius: 24rem 10rem 24rem 10rem;
       box-shadow: 0px 4px 4px 0px #00000040;
@@ -324,11 +306,9 @@ a {
   }
 
   .main_about_cards {
-    @include d-flex(flex-start, center, 4.2rem);
-    flex-direction: column;
+    @include d-flex(flex-start, center, column, 4.2rem);
     .main_about_cards_top {
-      @include d-flex(flex-start, center, 0.5rem);
-      flex-direction: column;
+      @include d-flex(flex-start, center, column, 0.5rem);
       .main_about_cards_top_title {
         @include font-style($--primary-color, 3.6rem, 700, 4.3rem);
       }
@@ -337,8 +317,7 @@ a {
       }
     }
     .main_about_cards_bottom {
-      @include d-flex(flex-start, center, 2.8rem);
-      flex-direction: column;
+      @include d-flex(flex-start, center, column, 2.8rem);
       .main_about_cards_bottom_text {
         @include font-style($--primary-color, 1.6rem, 400, 1.9rem);
       }
@@ -354,8 +333,7 @@ a {
   }
 
   @media screen and (max-width: 768px) {
-    @include d-flex(center, center, 5rem);
-    flex-direction: column;
+    @include d-flex(center, center, column, 5rem);
     .main_about_cards {
       .main_about_cards_top {
         display: none;
@@ -374,12 +352,11 @@ a {
 //   -------main_cards started--------
 
 .main_cards {
-  @include d-flex(center, space-between, 2rem);
+  @include d-flex(center, space-between, row, 2rem);
   flex-wrap: wrap;
   margin-top: 10rem;
   .main_cards_item {
-    @include d-flex(center, flex-start, 0);
-    flex-direction: column;
+    @include d-flex(center, flex-start, column, 0);
     min-height: 48rem;
     max-width: 31rem;
     padding: 2.3rem 2.5rem 4rem 2.5rem;
@@ -411,7 +388,6 @@ a {
       width: 15.4rem;
       height: 4.8rem;
       border-radius: 4rem;
-      // border: 1px solid red;
     }
   }
   .main_cards_item_one {
@@ -471,16 +447,14 @@ a {
 //   -------main_tech start--------
 
 .main_tech {
-  @include d-flex(center, flex-start, 6rem);
+  @include d-flex(center, flex-start, column, 6rem);
   margin-top: 10rem;
-  flex-direction: column;
   position: relative;
 
   .main_tech_image {
     position: relative;
     padding-block: 9rem;
     width: 100%;
-    // height: 30rem;
     background: url("assets/img/tech_bg_image.svg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -493,7 +467,7 @@ a {
       @include font-style($--primary-color, 3.6rem, 300, 4.3rem);
     }
     .main_tech_icon {
-      @include d-flex(center, center, 0);
+      @include d-flex(center, center, row, 0);
       position: absolute;
       width: 10rem;
       height: 10rem;
@@ -509,14 +483,13 @@ a {
         font-size: 3rem;
         color: #433d60;
         padding: 2rem;
-        // background-color: white;
         background: linear-gradient(267.61deg, #c0b7e8 -0.6%, #8176af 98.31%);
       }
     }
   }
 
   .main_tech_cards {
-    @include d-flex(center, center, 9rem);
+    @include d-flex(center, center, row, 9rem);
     flex-wrap: wrap;
     .main_tech_cards_icon {
       display: none;
@@ -524,10 +497,8 @@ a {
     .main_tech_cards_item_img:first-child {
       max-width: 17.4rem;
       max-height: 17.4rem;
-      // border: 1px solid red;
     }
     .main_tech_cards_item_img {
-      // border: 1px solid white;
       max-width: 25.2rem;
       max-height: 25.2rem;
       object-fit: cover;
@@ -543,14 +514,13 @@ a {
     .main_tech_cards {
       @include d-grid(1fr, 0);
       text-align: center;
-      // border: 1px solid red;
       .main_tech_cards_item_two,
       .main_tech_cards_item_three,
       .main_tech_cards_item_four {
         display: none;
       }
       .main_tech_cards_icon {
-        @include d-flex(center, center, 0);
+        @include d-flex(center, center, row, 0);
         position: absolute;
         width: 8rem;
         height: 8rem;
@@ -576,22 +546,21 @@ a {
 //   -------main_circleCards started--------
 
 .main_circleCards {
-  @include d-flex(center, center, 11rem);
+  @include d-flex(center, center, row, 11rem);
   flex-wrap: wrap;
   margin-top: 9rem;
   .main_circleCards_item {
-    @include d-flex(center, center, 2.5rem);
+    @include d-flex(center, center, column, 2.5rem);
     flex-direction: column;
-    // border: 1px solid red;
     position: relative;
     .main_circleCards_item_top {
-      @include d-flex(center, center, 0);
+      @include d-flex(center, center, row, 0);
       width: 19.8rem;
       height: 19.8rem;
       border-radius: 50%;
       background-color: #0d0d0d52;
       .main_circleCards_item_top_number {
-        @include d-flex(center, center, 0);
+        @include d-flex(center, center, row, 0);
         width: 16rem;
         height: 16rem;
         border-radius: 50%;
@@ -600,8 +569,7 @@ a {
       }
     }
     .main_circleCards_item_bottom {
-      @include d-flex(flex-start, flex-start, 0.8rem);
-      // border: 1px solid green;
+      @include d-flex(flex-start, flex-start, row, 0.8rem);
       .main_circleCards_item_bottom_icon {
         display: none;
       }
@@ -624,13 +592,11 @@ a {
     .main_circleCards_itemThree,
     .main_circleCards_itemFour {
       display: none;
-      // border: 1px solid red
     }
     .main_circleCards_item {
       .main_circleCards_item_bottom {
         .main_circleCards_item_bottom_icon {
-          display: block;
-          @include d-flex(center, center, 0);
+          @include d-flex(center, center, row, 0);
           position: absolute;
           border-radius: 50%;
           width: 6.2rem;
@@ -671,20 +637,17 @@ a {
 
 .main_register {
   background: radial-gradient(50% 50% at 50% 50%, #403a5f 0%, #211e2e 100%);
-  @include d-flex(center, center, 6rem);
-  flex-direction: column;
+  @include d-flex(center, center, column, 6rem);
   margin-top: 11rem;
-  padding: 9rem 10rem;
+  padding: 9rem 4rem;
   border-radius: 10rem;
   .main_register_top {
-    @include d-flex(center, center, 2rem);
-    flex-direction: column;
+    @include d-flex(center, center, column, 2rem);
     text-align: center;
     .main_register_top_title {
       @include font-style($--primary-color, 3.6rem, 700, 4.3rem);
       width: 41rem;
       padding-bottom: 3rem;
-      // border: 4px solid;
       border-bottom: 1px solid;
       border-image: linear-gradient(
           270deg,
@@ -700,8 +663,7 @@ a {
     }
   }
   .main_register_form {
-    @include d-flex(center, center, 5rem);
-    flex-direction: column;
+    @include d-flex(center, center, column, 5rem);
     width: 100%;
     .main_register_form_main {
       @include d-grid(auto auto, 1rem);
@@ -715,7 +677,7 @@ a {
         border-radius: 4rem;
         padding: 2rem 4.2rem;
         background-color: transparent;
-        border: 2px solid #fff;
+        border: 2px solid $--primary-color;
       }
       .main_register_form_main_input_text {
         height: 21rem;
@@ -724,12 +686,13 @@ a {
 
       .main_register_form_main_input::placeholder {
         @include font-style($--primary-color, 1.4rem, 400, 1.7rem);
-        // position: absolute;
-        // top: 2rem;
       }
       .main_register_form_main_input:focus {
         outline: none;
-        @include font-style($--primary-color, 1.4rem, 400, 1.7rem);
+        @include font-style($--primary-color, 1.6rem, 400, 1.7rem);
+      }
+      .main_register_form_main_input:not(:focus) {
+        @include font-style($--primary-color, 1.6rem, 400, 1.7rem);
       }
     }
     .main_register_form_button {
@@ -747,11 +710,7 @@ a {
       width: 100%;
       .main_register_form_main {
         width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        flex-direction: column;
-        gap: 2.2rem;
+        @include d-flex(center, flex-start, column, 2.2rem);
         .main_register_form_main_input {
           width: 100%;
         }
@@ -770,31 +729,34 @@ a {
 // ---------footer started------
 
 .footer {
-  @include d-flex(center, flex-start, 4.3rem);
-  flex-direction: column;
-  // border: 1px solid red;
+  @include d-flex(center, flex-start, column, 4.3rem);
   margin-top: 12.2rem;
   .footer_top {
     width: 100%;
-    @include d-flex(flex-start, space-between, 0);
-    // border: 1px solid red;
+    @include d-flex(flex-start, center, row, 0);
     padding-bottom: 7rem;
     border-bottom: 1px solid;
-
-border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%, #343045 100%) 1;
-
+    border-image: linear-gradient(
+        270deg,
+        #343045 0%,
+        #c0b7e8 34.9%,
+        #8176af 68.75%,
+        #343045 100%
+      )
+      1;
 
     .footer_top_logo {
+      width: 23%;
       padding-right: 10rem;
-      // border: 1px solid red;
       .footer_top_logo_img {
-        // border: 1px solid white;
         width: 18.5rem;
         height: 18.5rem;
         object-fit: cover;
       }
     }
     .footer_top_menu {
+      width: 23%;
+      @include d-flex(flex-start, flex-start, column, 2rem);
       min-height: 19rem;
       padding-inline: 9rem;
       border-left: 6px solid;
@@ -808,8 +770,6 @@ border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%,
         )
         1;
 
-      @include d-flex(flex-start, flex-start, 2rem);
-      flex-direction: column;
       .footer_top_menu_item {
         .footer_top_menu_item_link {
           @include font-style($--primary-color, 1.6rem, 700, 1.9rem);
@@ -817,8 +777,9 @@ border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%,
       }
     }
     .footer_top_about {
-      @include d-flex(flex-start, flex-start, 3.9rem);
-      flex-direction: column;
+      width: 30%;
+      @include d-flex(flex-start, flex-start, column, 3.9rem);
+      min-height: 19rem;
       padding-left: 9rem;
       border-left: 6px solid;
       border-image: linear-gradient(
@@ -830,14 +791,14 @@ border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%,
           #343045 99.5%
         )
         1;
-      min-height: 19rem;
       .footer_top_about_title {
         @include font-style($--primary-color, 1.6rem, 700, 1.9rem);
       }
       .footer_top_about_media {
-        @include d-flex(center, flex-start, 2rem);
+        @include d-flex(center, flex-start, row, 2rem);
+        flex-wrap: wrap;
         .footer_top_about_media_item {
-          @include d-flex(center, center, 0);
+          @include d-flex(center, center, row, 0);
           width: 3.2rem;
           height: 3.2rem;
           border-radius: 50%;
@@ -849,7 +810,8 @@ border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%,
       }
       .footer_top_about_button {
         @include font-style($--secondary-color, 1.2rem, 700, 1.4rem);
-        width: 21rem;
+        max-width: 21rem;
+        padding-inline: 2rem;
         height: 4.8rem;
         border-radius: 4rem;
         background: linear-gradient(90deg, #8176af 0%, #c0b7e8 100%);
@@ -857,44 +819,44 @@ border-image: linear-gradient(270deg, #343045 0%, #C0B7E8 34.9%, #8176AF 68.75%,
       }
     }
   }
-.footer_bottom{
-  @include d-flex(center,center,.3rem);
-  .footer_bottom_text{
-@include font-style($--primary-color,1.4rem,700,1.7rem)
+  .footer_bottom {
+    @include d-flex(center, center, row, 0.3rem);
+    .footer_bottom_text {
+      @include font-style($--primary-color, 1.4rem, 700, 1.7rem);
+    }
   }
-}
-  
-@media screen and (max-width:768px) {
-  .footer_top{
-    @include d-flex(center,center,5rem);
-    flex-direction: column;
-    .footer_top_logo{
-      @include d-flex(center,center,0);
-      padding: 0;
-      
 
-    }
-    .footer_top_menu{
-      display: none;
-    }
-    .footer_top_about{
-      border: none;
-      padding: 0;
-      align-items: center;
-      .footer_top_about_button{
-        width: 100%;
+  @media screen and (max-width: 768px) {
+    .footer_top {
+      @include d-flex(center, center, column, 5rem);
+      .footer_top_logo {
+        @include d-flex(center, center, row, 0);
+        padding: 0;
+      }
+      .footer_top_menu {
+        display: none;
+      }
+      .footer_top_about {
+        border: none;
+        padding: 0;
+        align-items: center;
+        .footer_top_about_media {
+          flex-wrap: nowrap;
+        }
+        .footer_top_about_button {
+          width: 100%;
+        }
       }
     }
+    .footer_bottom {
+      text-align: center;
+      flex-direction: column;
+    }
+    .footer_bottom_text:nth-child(2)::first-letter,
+    .footer_bottom_text:nth-child(3)::first-letter {
+      font-size: 0;
+    }
   }
-  .footer_bottom{
-    text-align: center;
-    flex-direction: column;
-  }
-  .footer_bottom_text:nth-child(2)::first-letter,
-  .footer_bottom_text:nth-child(3)::first-letter{
-    font-size: 0;
-  }
-}
 }
 
 // ---------footer ended------
