--- a/main.scss
+++ b/main.scss
@@ -278,12 +278,16 @@ a {
     .main_introduction_and_build_text {
       display: none;
     }
-    .main_section_title_icon {
-      display: none;
-    }
-    .main_introduction_and_build_title_secondary {
-      margin-top: 1.6rem;
-      flex-direction: column;
+    .main_introduction_and_build_title {
+      width: 100%;
+      .main_introduction_and_build_title_secondary {
+        width: 100%;
+        margin-top: 1.6rem;
+        flex-direction: column;
+        .main_section_title_icon {
+          display: none;
+        }
+      }
     }
   }
 }
@@ -840,6 +844,9 @@ a {
         border: none;
         padding: 0;
         align-items: center;
+        .footer_top_about_title {
+          text-align: center;
+        }
         .footer_top_about_media {
           flex-wrap: nowrap;
         }
