--- a/main.scss
+++ b/main.scss
@@ -213,6 +213,9 @@ a {
               display: none;
             }
           }
+          .main_banner_top_text_button_img{
+            display: none
+          }
         }
       }
     }
