--- a/main.css
+++ b/main.css
@@ -1,9 +1,3 @@
-@charset "UTF-8";
-@media screen and (max-width: 768px) {
-  html, body {
-    font-size: 8px !important; /* important yazmasam işləmir */
-  }
-}
 * {
   margin: 0;
   padding: 0;
@@ -16,8 +10,8 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
   font-family: "Montserrat", sans-serif;
+  font-size: 1.6rem;
 }
 
 ul li {
@@ -112,17 +106,6 @@ a {
 }
 .container .header .header_navbar .header_navbar_icon {
   display: none;
-}
-@media screen and (max-width: 768px) {
-  .container .header .header_navbar .header_navbar_menu {
-    display: none;
-  }
-  .container .header .header_navbar .header_navbar_button {
-    display: none;
-  }
-  .container .header .header_navbar .header_navbar_icon {
-    display: block;
-  }
 }
 .container .main .main_banner {
   display: flex;
@@ -252,65 +235,6 @@ a {
 .container .main .main_banner .main_banner_bottom .main_banner_bottom_item:last-child {
   border: none;
 }
-@media screen and (max-width: 768px) {
-  .container .main .main_banner .main_banner_top {
-    flex-direction: column-reverse;
-  }
-  .container .main .main_banner .main_banner_top .main_banner_top_text {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 0;
-    text-align: center;
-  }
-  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_paragraph {
-    display: none;
-  }
-  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button {
-    width: 100%;
-  }
-  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_link {
-    width: 100%;
-    height: 9.6rem;
-  }
-  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_link .main_banner_top_text_button_img {
-    display: none;
-  }
-  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_img {
-    display: none;
-  }
-  .container .main .main_banner .main_banner_bottom {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 0;
-  }
-  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-    gap: 2rem;
-    border: none;
-  }
-  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_icon {
-    display: block;
-  }
-  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_center {
-    gap: 1rem;
-  }
-  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_center .main_banner_bottom_item_center_text .main_banner_bottom_item_center_text_title {
-    display: none;
-  }
-  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_text_title {
-    display: none;
-  }
-  .container .main .main_banner .main_banner_bottom .main_banner_bottom_itemTwo,
-  .container .main .main_banner .main_banner_bottom .main_banner_bottom_itemThree {
-    display: none;
-  }
-}
 .container .main .main_introduction_and_build {
   display: grid;
   grid-template-columns: 1fr 1.1fr;
@@ -345,28 +269,6 @@ a {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.9rem;
-}
-@media screen and (max-width: 768px) {
-  .container .main .main_introduction_and_build {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 0;
-    text-align: center;
-  }
-  .container .main .main_introduction_and_build .main_introduction_and_build_text {
-    display: none;
-  }
-  .container .main .main_introduction_and_build .main_introduction_and_build_title {
-    width: 100%;
-  }
-  .container .main .main_introduction_and_build .main_introduction_and_build_title .main_introduction_and_build_title_secondary {
-    width: 100%;
-    margin-top: 1.6rem;
-    flex-direction: column;
-  }
-  .container .main .main_introduction_and_build .main_introduction_and_build_title .main_introduction_and_build_title_secondary .main_section_title_icon {
-    display: none;
-  }
 }
 .container .main .main_about {
   display: grid;
@@ -431,21 +333,6 @@ a {
   background-image: linear-gradient(90deg, #8176AF 0%, #C0B7E8 100%);
   border-radius: 4rem;
   cursor: pointer;
-}
-@media screen and (max-width: 768px) {
-  .container .main .main_about {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 5rem;
-  }
-  .container .main .main_about .main_about_cards .main_about_cards_top {
-    display: none;
-  }
-  .container .main .main_about .main_about_cards .main_about_cards_bottom .main_about_cards_bottom_button {
-    align-self: center;
-  }
 }
 .container .main .main_cards {
   display: flex;
@@ -537,19 +424,6 @@ a {
   right: -4.8rem;
   top: 50%;
   transform: translate(-50%, -50%);
-}
-@media screen and (max-width: 768px) {
-  .container .main .main_cards {
-    justify-content: center;
-  }
-  .container .main .main_cards .main_cards_item_two,
-  .container .main .main_cards .main_cards_item_three,
-  .container .main .main_cards .main_cards_item_four {
-    display: none;
-  }
-  .container .main .main_cards .main_cards_item_one .main_cards_icon {
-    display: block;
-  }
 }
 .container .main .main_tech {
   display: flex;
@@ -1004,6 +878,234 @@ a {
   font-size: 1.4rem;
   font-weight: 700;
   line-height: 1.7rem;
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 5px;
+  }
+  body {
+    font-size: 1.6rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .header .header_navbar .header_navbar_menu {
+    display: none;
+  }
+  .container .header .header_navbar .header_navbar_button {
+    display: none;
+  }
+  .container .header .header_navbar .header_navbar_icon {
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .main .main_banner .main_banner_top {
+    flex-direction: column-reverse;
+  }
+  .container .main .main_banner .main_banner_top .main_banner_top_text {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0;
+    text-align: center;
+  }
+  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_paragraph {
+    display: none;
+  }
+  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button {
+    width: 100%;
+  }
+  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_link {
+    width: 100%;
+    height: 9.6rem;
+  }
+  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_link .main_banner_top_text_button_img {
+    display: none;
+  }
+  .container .main .main_banner .main_banner_top .main_banner_top_text .main_banner_top_text_button .main_banner_top_text_button_img {
+    display: none;
+  }
+  .container .main .main_banner .main_banner_bottom {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 2rem;
+    border: none;
+  }
+  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_icon {
+    display: block;
+  }
+  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_center {
+    gap: 1rem;
+  }
+  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_center .main_banner_bottom_item_center_text .main_banner_bottom_item_center_text_title {
+    display: none;
+  }
+  .container .main .main_banner .main_banner_bottom .main_banner_bottom_item .main_banner_bottom_item_text_title {
+    display: none;
+  }
+  .container .main .main_banner .main_banner_bottom .main_banner_bottom_itemTwo,
+  .container .main .main_banner .main_banner_bottom .main_banner_bottom_itemThree {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .main .main_introduction_and_build {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0;
+    text-align: center;
+  }
+  .container .main .main_introduction_and_build .main_introduction_and_build_text {
+    display: none;
+  }
+  .container .main .main_introduction_and_build .main_introduction_and_build_title {
+    width: 100%;
+  }
+  .container .main .main_introduction_and_build .main_introduction_and_build_title .main_introduction_and_build_title_secondary {
+    width: 100%;
+    margin-top: 1.6rem;
+    flex-direction: column;
+  }
+  .container .main .main_introduction_and_build .main_introduction_and_build_title .main_introduction_and_build_title_secondary .main_section_title_icon {
+    display: none;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .main .main_about {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 5rem;
+  }
+  .container .main .main_about .main_about_cards .main_about_cards_top {
+    display: none;
+  }
+  .container .main .main_about .main_about_cards .main_about_cards_bottom .main_about_cards_bottom_button {
+    align-self: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .main .main_cards {
+    justify-content: center;
+  }
+  .container .main .main_cards .main_cards_item_two,
+  .container .main .main_cards .main_cards_item_three,
+  .container .main .main_cards .main_cards_item_four {
+    display: none;
+  }
+  .container .main .main_cards .main_cards_item_one .main_cards_icon {
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .main .main_tech .main_tech_image .main_tech_icon {
+    display: none;
+  }
+  .container .main .main_tech .main_tech_cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0;
+    text-align: center;
+  }
+  .container .main .main_tech .main_tech_cards .main_tech_cards_item_two,
+  .container .main .main_tech .main_tech_cards .main_tech_cards_item_three,
+  .container .main .main_tech .main_tech_cards .main_tech_cards_item_four {
+    display: none;
+  }
+  .container .main .main_tech .main_tech_cards .main_tech_cards_icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 0;
+    position: absolute;
+    width: 8rem;
+    height: 8rem;
+    background-color: rgba(14, 14, 14, 0.3215686275);
+    border-radius: 50%;
+  }
+  .container .main .main_tech .main_tech_cards .main_tech_cards_icon .main_tech_cards_icon_img {
+    border-radius: 50%;
+    background: linear-gradient(90deg, #8176AF 0%, #C0B7E8 100%);
+  }
+  .container .main .main_tech .main_tech_cards .main_tech_cards_left_icon {
+    left: 0;
+  }
+  .container .main .main_tech .main_tech_cards .main_tech_cards_right_icon {
+    right: 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .main .main_circleCards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+  .container .main .main_circleCards .main_circleCards_itemTwo,
+  .container .main .main_circleCards .main_circleCards_itemThree,
+  .container .main .main_circleCards .main_circleCards_itemFour {
+    display: none;
+  }
+  .container .main .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 0;
+    position: absolute;
+    border-radius: 50%;
+    width: 6.2rem;
+    height: 6.2rem;
+    background-color: rgba(14, 14, 14, 0.3215686275);
+  }
+  .container .main .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon i {
+    background: linear-gradient(267.61deg, #c0b7e8 -0.6%, #8176af 98.31%);
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4.4rem;
+    height: 4.4rem;
+    border-radius: 50%;
+    font-size: 2rem;
+    color: #433d60;
+  }
+  .container .main .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon_left {
+    left: -2rem;
+  }
+  .container .main .main_circleCards .main_circleCards_item .main_circleCards_item_bottom .main_circleCards_item_bottom_icon_right {
+    right: -2rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container .main .main_register .main_register_form {
+    width: 100%;
+  }
+  .container .main .main_register .main_register_form .main_register_form_main {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 2.2rem;
+  }
+  .container .main .main_register .main_register_form .main_register_form_main .main_register_form_main_input {
+    width: 100%;
+  }
+  .container .main .main_register .main_register_form .main_register_form_button {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 768px) {
   .container .footer .footer_top {
